--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "mpdf/mpdf",
+	"name": "setasign/mpdf",
 	"type": "library",
 	"description": "A PHP class to generate PDF files from HTML with Unicode/UTF-8 and CJK support",
 	"keywords": ["php", "pdf", "utf-8"],
