Update to FPDI 1.6.0
Updated classes of FPDI to their current versions and updated the code
in mPDF respectively. Additionally missing example pdfs were added.

Require FPDI via composer instead of duplication of all classes.

Clean up some of the spacing issues caused by the merge into the development branch

Update unit tests to reflect lastest FPDI version

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
 
 	"require": {
 		"php": ">=5.3.2",
-		"ext-mbstring": "*"
+		"ext-mbstring": "*",
+		"setasign/fpdi": "1.6.*"
 	},
 
 	"require-dev": {
