Configure PHPUnit and write baseline tests for the mPDI (FPDI) classes
- Update Readme to include details about unit testing

- Add .gitignore file
- Add `/tests/` directory and `.gitignore` files to .gitattributes's export-ignore functionality

Refactor tests to more standardised format

- Add PHPUnit to composer

- Update readme to include instructions for installing composer packages and running unit tests through said package
- Use composer's autoloader to include mPDF during unit tests
- Update gitignore so the vendor directory is excluded

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,9 @@
 # Don't include these files and directories when exporting archives
-*.gitattributes export-ignore 
+*.gitattributes export-ignore
 /examples export-ignore
 /utils export-ignore
+/tests export-ignore
+.gitignore export-ignore
 
 # Set the default behavior, in case people don't have core.autocrlf set.
 * text=auto
