Update to FPDI 1.6.0
Require FPDI via composer instead of duplication of all classes.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 	},
 	"require": {
 		"php": ">=4.3.10",
-		"ext-mbstring": "*"
+		"ext-mbstring": "*",
+		"setasign/fpdi": "1.6.*"
 	},
 	"autoload": {
 		"classmap": ["mpdf.php", "classes"]
