composer.json formatting

--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,51 @@
 {
+
 	"name": "mpdf/mpdf",
 	"type": "library",
+
 	"description": "A PHP class to generate PDF files from HTML with Unicode/UTF-8 and CJK support",
+
 	"keywords": ["php", "pdf", "utf-8"],
 	"homepage": "http://www.mpdf1.com/mpdf/index.php",
+
 	"license": ["GPL-2.0"],
+
 	"authors": [
 		{
 			"name": "Ian Back",
 			"role": "Developer"
 		}
 	],
+
 	"support": {
-	"issues": "https://github.com/mpdf/mpdf/issues",
-	"forum": "http://www.mpdf1.com/forum/",
-	"source": "https://github.com/mpdf/mpdf"
+		"issues": "https://github.com/mpdf/mpdf/issues",
+		"forum": "http://www.mpdf1.com/forum/",
+		"source": "https://github.com/mpdf/mpdf"
 	},
+
 	"require": {
 		"php": ">=5.3.2",
 		"ext-mbstring": "*"
 	},
-    "require-dev": {
-        "phpunit/phpunit": "4.7.*"
-    },
+
+	"require-dev": {
+		"phpunit/phpunit": "^4.7"
+	},
+
+	"suggest": {
+		"ext-zlib": "Needed for compression of embedded resources, such as fonts"
+	},
+
 	"autoload": {
 		"classmap": ["mpdf.php", "classes"]
 	},
+
 	"scripts": {
-			"post-install-cmd": [
-				"php -r \"chmod('./ttfontdata', 0777);\"",
-				"php -r \"chmod('./tmp', 0777);\"",
-				"php -r \"chmod('./graph_cache', 0777);\""
-			]
-		}
+		"post-install-cmd": [
+			"php -r \"chmod('./ttfontdata', 0777);\"",
+			"php -r \"chmod('./tmp', 0777);\"",
+			"php -r \"chmod('./graph_cache', 0777);\""
+		]
+	}
+
 }
