Remove trailing slash from _MPDF_TEMP_PATH, move ttfonts temp dir under _MPDF_TEMP_PATH

--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,8 @@
 
 	"scripts": {
 		"post-install-cmd": [
-			"php -r \"chmod('./ttfontdata', 0777);\"",
-			"php -r \"chmod('./tmp', 0777);\""
+			"php -r \"chmod('./tmp', 0777);\"",
+			"php -r \"chmod('./tmp/ttfontdata', 0777);\""
 		]
 	}
 
