--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 	},
 
 	"require": {
-		"php": "^5.6 || ^7.0",
+		"php": "^5.6 || ~7.0.0",
 		"ext-mbstring": "*",
 		"setasign/fpdi": "1.6.*",
 		"psr/log": "^1.0"
