--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
 	"require": {
 		"php": "^5.6 || ~7.0.0",
 		"ext-mbstring": "*",
+		"ext-gd": "*",
 		"setasign/fpdi": "1.6.*",
 		"psr/log": "^1.0"
 	},
