--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
 	},
 
 	"require-dev": {
-		"phpunit/phpunit": "^5.0"
+		"phpunit/phpunit": "^5.0",
+		"mockery/mockery": "^0.9.5"
 	},
 
 	"suggest": {
