--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,14 @@
 		"php": "^5.6 || ~7.0.0 || ~7.1.0",
 		"ext-mbstring": "*",
 		"ext-gd": "*",
-		"setasign/fpdi": "1.6.*",
-		"psr/log": "^1.0"
+		"psr/log": "^1.0",
+		"setasign/fpdi": "1.6.*"
 	},
 
 	"require-dev": {
 		"phpunit/phpunit": "^5.0",
-		"mockery/mockery": "^0.9.5"
+		"mockery/mockery": "^0.9.5",
+		"paragonie/random_compat": "^2.0"
 	},
 
 	"suggest": {
