Load functions.php file with composer autoload

--- a/composer.json
+++ b/composer.json
@@ -43,9 +43,15 @@
 	},
 
 	"autoload": {
+
 		"psr-4": {
 			"Mpdf\\": "src/"
-		}
+		},
+
+		"files": [
+			"src/functions.php"
+		]
+
 	},
 
 	"scripts": {
