--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,26 @@ php:
   - nightly
 
 matrix:
+  include:
+    - env: LINT=1
+      php: 5.6
+
   allow_failures:
     - php: hhvm
     - php: nightly
+    - env: LINT=1
 
 install:
   - composer self-update
   - composer install --ignore-platform-reqs
+
+script:
+  - |
+    if [[ "$LINT" == "1" ]]; then
+      ./vendor/bin/phpcs -v --report-width=160 --standard=.phpcs_ruleset.xml --severity=1 --warning-severity=0 --extensions=php,inc src utils
+    else
+      phpunit
+    fi
 
 notifications:
   email: change
