--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
 
 install:
   - composer self-update
-  - composer install
+  - composer install --ignore-platform-reqs
 
 notifications:
   email: change
