Fix Travis allow_failures syntax

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ php:
 
 matrix:
   allow_failures:
-    php:
-      - hhvm
-      - nightly
+    - php: hhvm
+    - php: nightly
 
 install:
   - composer self-update
