Run phpunit from vendor directory in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
     if [[ "$LINT" == "1" ]]; then
       ./vendor/bin/phpcs -v --report-width=160 --standard=ruleset.xml --severity=1 --warning-severity=0 --extensions=php src utils
     else
-      phpunit
+      vendor/bin/phpunit
     fi
 
 notifications:
