--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
 		"phpunit/phpunit": "^5.0",
 		"mockery/mockery": "^0.9.5",
 		"squizlabs/php_codesniffer": "^2.7.0",
-		"paragonie/random_compat": "^2.0"
+		"paragonie/random_compat": "^2.0",
+		"tracy/tracy": "^2.4"
 	},
 
 	"suggest": {
