--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
 
 	"authors": [
 		{
+			"name": "Matěj Humpál",
+			"role": "Developer, maintainer"
+		},
+		{
 			"name": "Ian Back",
 			"role": "Developer"
 		}
@@ -28,20 +32,21 @@
 		"ext-gd": "*",
 		"ext-mbstring": "*",
 		"psr/log": "^1.0",
-		"setasign/fpdi": "1.6.*"
+		"setasign/fpdi": "1.6.*",
+		"paragonie/random_compat": "^2.0"
 	},
 
 	"require-dev": {
 		"phpunit/phpunit": "^5.0",
 		"mockery/mockery": "^0.9.5",
 		"squizlabs/php_codesniffer": "^2.7.0",
-		"paragonie/random_compat": "^2.0",
 		"tracy/tracy": "^2.4"
 	},
 
 	"suggest": {
 		"ext-bcmath": "Needed for generation of some types of barcodes",
-		"ext-zlib": "Needed for compression of embedded resources, such as fonts"
+		"ext-zlib": "Needed for compression of embedded resources, such as fonts",
+		"ext-xml": "Needed mainly for SVG manipulation"
 	},
 
 	"autoload": {
