--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"description": "A PHP class to generate PDF files from HTML with Unicode/UTF-8 and CJK support",
 
 	"keywords": ["php", "pdf", "utf-8"],
-	"homepage": "http://mpdf.github.io",
+	"homepage": "https://mpdf.github.io",
 
 	"license": ["GPL-2.0"],
 
@@ -17,36 +17,46 @@
 		},
 		{
 			"name": "Ian Back",
-			"role": "Developer"
+			"role": "Developer (retired)"
 		}
 	],
 
 	"support": {
+
 		"issues": "https://github.com/mpdf/mpdf/issues",
 		"source": "https://github.com/mpdf/mpdf",
 		"docs": "http://mpdf.github.io"
+
 	},
 
 	"require": {
+
 		"php": "^5.6 || ~7.0.0 || ~7.1.0",
+
 		"ext-gd": "*",
 		"ext-mbstring": "*",
+
 		"psr/log": "^1.0",
 		"setasign/fpdi": "1.6.*",
 		"paragonie/random_compat": "^2.0"
+
 	},
 
 	"require-dev": {
+
 		"phpunit/phpunit": "^5.0",
 		"mockery/mockery": "^0.9.5",
 		"squizlabs/php_codesniffer": "^2.7.0",
 		"tracy/tracy": "^2.4"
+
 	},
 
 	"suggest": {
+
 		"ext-bcmath": "Needed for generation of some types of barcodes",
 		"ext-zlib": "Needed for compression of embedded resources, such as fonts",
 		"ext-xml": "Needed mainly for SVG manipulation"
+
 	},
 
 	"autoload": {
