--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 
-	"name": "mpdf/mpdf",
+	"name": "kikusempai/mpdf",
 	"type": "library",
 
 	"description": "A PHP class to generate PDF files from HTML with Unicode/UTF-8 and CJK support",
