--- a/composer.json
+++ b/composer.json
@@ -1,94 +1,63 @@
 {
-
-	"name": "mpdf/mpdf",
-	"type": "library",
-
-	"description": "A PHP class to generate PDF files from HTML with Unicode/UTF-8 and CJK support",
-
-	"keywords": ["php", "pdf", "utf-8"],
-	"homepage": "https://mpdf.github.io",
-
-	"license": ["GPL-2.0"],
-
-	"authors": [
-		{
-			"name": "Matěj Humpál",
-			"role": "Developer, maintainer"
-		},
-		{
-			"name": "Ian Back",
-			"role": "Developer (retired)"
-		}
-	],
-
-	"support": {
-
-		"issues": "https://github.com/mpdf/mpdf/issues",
-		"source": "https://github.com/mpdf/mpdf",
-		"docs": "http://mpdf.github.io"
-
-	},
-
-	"require": {
-
-		"php": "^5.6 || ~7.0.0 || ~7.1.0 || ~7.2.0",
-
-		"ext-gd": "*",
-		"ext-mbstring": "*",
-
-		"psr/log": "^1.0",
-		"setasign/fpdi": "1.6.*",
-		"paragonie/random_compat": "^1.4|^2.0"
-
-	},
-
-	"require-dev": {
-
-		"phpunit/phpunit": "^5.0",
-		"mockery/mockery": "^0.9.5",
-		"squizlabs/php_codesniffer": "^2.7.0",
-		"tracy/tracy": "^2.4"
-
-	},
-
-	"suggest": {
-
-		"ext-bcmath": "Needed for generation of some types of barcodes",
-		"ext-zlib": "Needed for compression of embedded resources, such as fonts",
-		"ext-xml": "Needed mainly for SVG manipulation"
-
-	},
-
-	"autoload": {
-
-		"psr-4": {
-			"Mpdf\\": "src/"
-		}
-
-	},
-
-	"autoload-dev": {
-
-		"psr-4": {
-			"Mpdf\\": "tests/Mpdf"
-		},
-
-		"files": [
-			"src/functions-dev.php"
-		]
-
-	},
-
-	"scripts": {
-		"post-install-cmd": [
-			"php -r \"chmod('./tmp', 0777);\""
-		]
-	},
-
-	"extra": {
-		"branch-alias": {
-			"dev-development": "7.0-dev"
-		}
-	}
-
+  "name": "ghans/mpdf-laravel-wrapper",
+  "description": "Fork from mpdf/mpdf adapted to laravel 5.*",
+  "type": "library",
+  "require": {
+    "php": ">=5.6",
+    "ext-gd": "*",
+    "ext-mbstring": "*",
+    "illuminate/support": "5.*",
+    "laravel/laravel": "5.*",
+    "psr/log": "^1.0",
+    "setasign/fpdi": "1.6.*",
+    "paragonie/random_compat": ">=1.4"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.0",
+    "mockery/mockery": "^0.9.5",
+    "squizlabs/php_codesniffer": "^2.7.0",
+    "tracy/tracy": "^2.4"
+  },
+  "suggest": {
+    "ext-bcmath": "Needed for generation of some types of barcodes",
+    "ext-zlib": "Needed for compression of embedded resources, such as fonts",
+    "ext-xml": "Needed mainly for SVG manipulation"
+  },
+  "license": "GPL-2.0",
+  "authors": [
+    {
+      "name": "Gabriel Hans Gonzalez",
+      "email": "ghans@intecfra.com"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Mpdf\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Mpdf\\": "tests/Mpdf"
+    },
+    "files": [
+      "src/functions-dev.php"
+    ]
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "php -r \"chmod('./storage/app/', 0777);\""
+    ]
+  },
+  ,
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Mpdf\\Providers\\PDFServiceProvider"
+      ],
+      "aliases": {
+        "mpdf": "Mpdf\\Providers\\PDFFacade"
+      }
+    }
+  },
+  "minimum-stability": "dev"
 }
