Fix the TOC page numbering problem
To do this, the current class is deep cloned and then the TOC functionality run. The correct page numbers are calculated when the TOC pages are moved into position in the cloned object (see Mpdf::MovePages). It's then a matter of copying the correct page numbers to the original object and letting the TOC functionality run as per normal.

Resolves #642

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
 
 		"psr/log": "^1.0",
 		"setasign/fpdi": "1.6.*",
-		"paragonie/random_compat": "^1.4|^2.0"
+		"paragonie/random_compat": "^1.4|^2.0",
+		"myclabs/deep-copy": "^1.7"
 
 	},
 
