--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,7 @@
 		"psr/log": "^1.0",
 		"setasign/fpdi": "1.6.*",
 		"paragonie/random_compat": "^1.4|^2.0|9.99.99",
-		"myclabs/deep-copy": "^1.7",
-		"kdyby/strict-objects": "^1.0"
+		"myclabs/deep-copy": "^1.7"
 
 	},
 
