--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ php:
   - 7.0
   - 7.1
   - 7.2
+  - 7.3
   - nightly
 
 matrix:
@@ -25,7 +26,7 @@ matrix:
 
 install:
   - composer self-update
-  - composer install
+  - composer install --ignore-platform-reqs
 
 script:
   - |
