--- a/composer.json
+++ b/composer.json
@@ -33,13 +33,11 @@
 
 		"php": "^5.6 || ~7.0.0 || ~7.1.0 || ~7.2.0 || ~7.3.0",
 
-		"ext-gd": "*",
-		"ext-mbstring": "*",
-
 		"psr/log": "^1.0",
 		"setasign/fpdi": "^2.1",
 		"paragonie/random_compat": "^1.4|^2.0|9.99.99",
 		"myclabs/deep-copy": "^1.7"
+		"symfony/polyfill-mbstring": "^1.0",
 
 	},
 
@@ -57,7 +55,8 @@
 
 		"ext-bcmath": "Needed for generation of some types of barcodes",
 		"ext-zlib": "Needed for compression of embedded resources, such as fonts",
-		"ext-xml": "Needed mainly for SVG manipulation"
+		"ext-xml": "Needed mainly for SVG manipulation",
+		"ext-gd": "Needed for image manipulation",
 
 	},
 
