--- a/.travis.yml
+++ b/.travis.yml
@@ -37,11 +37,11 @@ install:
 script:
   - |
     if [[ "$LINT" == "1" ]]; then
-      ./vendor/bin/phpcs -v --report-width=160 --standard=ruleset.xml --severity=1 --warning-severity=0 --extensions=php src utils tests
+      composer cs
     elif [[ "$COVERAGE" == "1" ]]; then
-      vendor/bin/phpunit --coverage-text
+      composer coverage
     else
-      vendor/bin/phpunit
+      composer test
     fi
 
 notifications:
