--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4snaphot
   - nightly
 
 matrix:
@@ -28,7 +29,7 @@ install:
   - composer self-update
   - echo "${TRAVIS_PHP_VERSION:0:3}"
   - |
-    if [[ "${TRAVIS_PHP_VERSION:0:7}" == "nightly" ]]; then
+    if [[ "${TRAVIS_PHP_VERSION:0:7}" == "nightly" || "${TRAVIS_PHP_VERSION:0:10}" == "7.4snaphot" ]]; then
       composer install --ignore-platform-reqs
     else
       composer install
