--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
   - 7.1
   - 7.2
   - 7.3
-  - 7.4snaphot
+  - 7.4snapshot
   - nightly
 
 matrix:
@@ -23,13 +23,15 @@ matrix:
     #  php: 7.1
 
   allow_failures:
-    - php: nightly
+    - php:
+      - nightly
+      - 7.4snapshot
 
 install:
   - composer self-update
   - echo "${TRAVIS_PHP_VERSION:0:3}"
   - |
-    if [[ "${TRAVIS_PHP_VERSION:0:7}" == "nightly" || "${TRAVIS_PHP_VERSION:0:10}" == "7.4snaphot" ]]; then
+    if [[ "${TRAVIS_PHP_VERSION:0:7}" == "nightly" || "${TRAVIS_PHP_VERSION:0:10}" == "7.4snapshot" ]]; then
       composer install --ignore-platform-reqs
     else
       composer install
