--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,9 @@ install:
   - composer self-update
   - echo "${TRAVIS_PHP_VERSION:0:3}"
   - |
-    if [[ "${TRAVIS_PHP_VERSION:0:7}" == "nightly" || "${TRAVIS_PHP_VERSION:0:10}" == "7.4snapshot" ]]; then
+    if [[ "${TRAVIS_PHP_VERSION:0:7}" == "nightly" ]]; then
+      composer install --ignore-platform-reqs
+    elif [[ "${TRAVIS_PHP_VERSION:0:10}" == "7.4snapshot" ]]; then
       composer install --ignore-platform-reqs
     else
       composer install
