Allow to install

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
   - |
     if [[ "${TRAVIS_PHP_VERSION:0:7}" == "nightly" ]]; then
       composer install --ignore-platform-reqs
-    elif [[ "${TRAVIS_PHP_VERSION:0:10}" == "7.4snapshot" ]]; then
+    elif [[ "${TRAVIS_PHP_VERSION:0:3}" == "7.4" ]]; then
       composer install --ignore-platform-reqs
     else
       composer install
