--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ dist: xenial
 group: edge
 
 php:
-  - 7.3
-  - 7.1
   - 5.6
-  - 7.4
-  - 7.2
   - 7.0
-  - nightly
+  - 7.1
+  - 7.2
+  - 7.3
+  - 7.4
+  - 8.0
 
 matrix:
 
@@ -22,18 +22,10 @@ matrix:
     #- env: COVERAGE=1
     #  php: 7.1
 
-  allow_failures:
-    - php: nightly
-
 install:
   - composer self-update
   - echo "${TRAVIS_PHP_VERSION:0:3}"
-  - |
-    if [[ "${TRAVIS_PHP_VERSION:0:7}" == "nightly" ]]; then
-      composer install --ignore-platform-reqs
-    else
-      composer install
-    fi
+  - composer install
 
 script:
   - |
