--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - "master"
       - "development"
+      - "test"
 
 jobs:
 
@@ -27,7 +28,6 @@ jobs:
           - "7.2"
           - "7.3"
           - "7.4"
-          - "8.0"
         operating-system: [ubuntu-latest, windows-latest]
 
     steps:
@@ -58,6 +58,7 @@ jobs:
       fail-fast: false
       matrix:
         php-version:
+          - "8.0"
           - "8.1"
         operating-system: [ubuntu-latest, windows-latest]
 
