Do not allow errors for PHP 8, keep ignore-platform-reqs

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
 
   tests-ignore-reqs:
 
-    name: "Tests on dev environments"
+    name: "Tests with ignore-platform-reqs"
 
     runs-on: ${{ matrix.operating-system }}
 
@@ -59,6 +59,37 @@ jobs:
       matrix:
         php-version:
           - "8.0"
+        operating-system: [ ubuntu-latest, windows-latest ]
+
+    steps:
+      -   name: "Checkout"
+          uses: "actions/checkout@v2"
+
+      -   name: "Install PHP"
+          uses: "shivammathur/setup-php@v2"
+          with:
+            coverage: "none"
+            php-version: "${{ matrix.php-version }}"
+            extensions: "mbstring, gd, bcmath, bz2"
+            tools: composer:v2
+
+      -   name: "Install dependencies"
+          run: "composer install --no-interaction --no-progress --ignore-platform-reqs"
+
+      -   name: "Tests"
+          run: composer test
+          continue-on-error: true
+
+  tests-ignore-reqs-ignore-errors:
+
+    name: "Tests on dev environments"
+
+    runs-on: ${{ matrix.operating-system }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        php-version:
           - "8.1"
         operating-system: [ubuntu-latest, windows-latest]
 
