--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,11 @@
 		"setasign/fpdi": "^2.1"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^5.7",
 		"mockery/mockery": "^1.3.0",
+		"mpdf/qrcode": "^1.1.0",
 		"squizlabs/php_codesniffer": "^3.5.0",
 		"tracy/tracy": "^2.4",
-		"mpdf/qrcode": "^1.1.0"
+		"yoast/phpunit-polyfills": "^1.0"
 	},
 	"suggest": {
 		"ext-bcmath": "Needed for generation of some types of barcodes",
