--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 		"docs": "http://mpdf.github.io"
 	},
 	"require": {
-		"php": "^5.6 || ^7.0 || ~8.0.0",
+		"php": "^5.6 || ^7.0 || ~8.0.0 || ~8.1.0",
 		"ext-gd": "*",
 		"ext-mbstring": "*",
 		"myclabs/deep-copy": "^1.7",
