--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "mpdf/mpdf-analize",
+	"name": "wendelulhoa/mpdf-analize",
 	"type": "library",
 	"description": "PHP library generating PDF files from UTF-8 encoded HTML",
 	"keywords": ["php", "pdf", "utf-8"],
@@ -7,12 +7,8 @@
 	"license": ["GPL-2.0-only"],
 	"authors": [
 		{
-			"name": "Matěj Humpál",
-			"role": "Developer, maintainer"
-		},
-		{
-			"name": "Ian Back",
-			"role": "Developer (retired)"
+			"name": "Wendel Ulhoa",
+			"role": "Developer"
 		}
 	],
 	"support": {
@@ -45,12 +41,12 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"Mpdf\\": "src/"
+			"MpdfAnalize\\": "src/"
 		}
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"Mpdf\\": "tests/Mpdf"
+			"MpdfAnalize\\": "tests/MpdfAnalize"
 		},
 		"files": [
 			"src/functions-dev.php"
