--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "analize/mpdf",
+	"name": "analize/mpdf-analize",
 	"type": "library",
 	"description": "PHP library generating PDF files from UTF-8 encoded HTML",
 	"keywords": ["php", "pdf", "utf-8"],
