--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,7 @@
 {
-	"name": "mpdf/mpdf",
+	"name": "omelya/mpdf",
 	"type": "library",
 	"description": "PHP library generating PDF files from UTF-8 encoded HTML",
-	"keywords": ["php", "pdf", "utf-8"],
-	"homepage": "https://mpdf.github.io",
-	"license": ["GPL-2.0-only"],
-	"authors": [
-		{
-			"name": "Matěj Humpál",
-			"role": "Developer, maintainer"
-		},
-		{
-			"name": "Ian Back",
-			"role": "Developer (retired)"
-		}
-	],
-	"support": {
-		"issues": "https://github.com/mpdf/mpdf/issues",
-		"source": "https://github.com/mpdf/mpdf",
-		"docs": "http://mpdf.github.io"
-	},
 	"require": {
 		"php": "^5.6 || ^7.0 || ~8.0.0 || ~8.1 || ~8.2.0",
 		"ext-gd": "*",
