Solve file:// paths in AssetFetcher::isPathLocal(); string functions polyfills

--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,10 @@
 	"autoload": {
 		"psr-4": {
 			"Mpdf\\": "src/"
-		}
+		},
+		"files": [
+			"src/functions.php"
+		]
 	},
 	"autoload-dev": {
 		"psr-4": {
