--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-	"name": "mpdf/mpdf",
+	"name": "fmjal/mpdf",
 	"type": "library",
-	"description": "PHP library generating PDF files from UTF-8 encoded HTML",
+	"description": "PHP library generating PDF files from UTF-8 encoded HTML - Fix nested tables",
 	"keywords": ["php", "pdf", "utf-8"],
 	"homepage": "https://mpdf.github.io",
 	"license": ["GPL-2.0-only"],
