--- a/composer.json
+++ b/composer.json
@@ -38,12 +38,13 @@
 		"squizlabs/php_codesniffer": "^3.5.0",
 		"tracy/tracy": "~2.5",
 		"yoast/phpunit-polyfills": "^1.0"
-	},
+    },
 	"suggest": {
 		"ext-bcmath": "Needed for generation of some types of barcodes",
 		"ext-zlib": "Needed for compression of embedded resources, such as fonts",
-		"ext-xml": "Needed mainly for SVG manipulation"
-	},
+		"ext-xml": "Needed mainly for SVG manipulation",
+        "ext-imagick": "Needed if developing the Mpdf library"
+    },
 	"autoload": {
 		"psr-4": {
 			"Mpdf\\": "src/"
@@ -54,7 +55,9 @@
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"Mpdf\\": "tests/Mpdf"
+			"Mpdf\\": "tests/Mpdf",
+            "Snapshots\\": "tests/Snapshots",
+            "Issues\\": "tests/Issues"
 		},
 		"files": [
 			"src/functions-dev.php"
@@ -65,6 +68,7 @@
 			"php -r \"chmod('./tmp', 0777);\""
 		],
 		"cs": "@php vendor/bin/phpcs --report-width=160 --standard=ruleset.xml --severity=1 --warning-severity=0 --extensions=php src utils tests",
+        "cs:fix": "@php vendor/bin/phpcbf --standard=ruleset.xml --extensions=php src utils tests",
 		"test": "@php vendor/bin/phpunit",
 		"coverage": "@php vendor/bin/phpunit --coverage-text"
 	},
